add modal window for tel

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,18 @@
             >
           </li>
         </ul>
+        <button
+          class="hamburger"
+          type="button"
+          aria-expanded="false"
+          aria-controls="menu-container"
+          data-menu-button
+        >
+          <svg class="hamburger__icon" width="40" height="40">
+            <use href="./images/icon-sprite-compress.svg#icon-hamburger"></use>
+            <use href="./images/icon-sprite-compress.svg#icon-close"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
