--- a/index.html
+++ b/index.html
@@ -64,10 +64,20 @@
           data-menu-button
         >
           <svg class="hamburger__icon" width="40" height="40">
-            <use href="./images/icon-sprite-compress.svg#icon-hamburger"></use>
-            <use href="./images/icon-sprite-compress.svg#icon-close"></use>
+            <use
+              class="hamburger__icon-menu"
+              href="./images/icon-sprite-compress.svg#icon-hamburger"
+            ></use>
+            <use
+              class="hamburger__icon-close"
+              href="./images/icon-sprite-compress.svg#icon-close"
+            ></use>
           </svg>
         </button>
+        <div class="menu-container" id="menu-container" data-menu>
+          <div class="navigation"></div>
+          <div class="contacts"></div>
+        </div>
       </div>
     </header>
     <main>
@@ -542,13 +552,14 @@
         </form>
       </div>
     </div>
-    <!-- <script>
+    <script>
       const { height: pageHeaderHeight } = document
         .querySelector('.page-header')
         .getBoundingClientRect();
 
       document.body.style.paddingTop = `${pageHeaderHeight}px`;
-    </script> -->
+    </script>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
