completed mobile-menu

--- a/index.html
+++ b/index.html
@@ -21,6 +21,37 @@
   <body>
     <!-- <div class="container"> -->
     <header class="page-header">
+      <div class="mobile-menu__container" id="menu-container" data-menu>
+        <ul class="mobile-navigation">
+          <li class="mobile-navigation__item">
+            <a class="mobile-navigation__link current" href="./index.html">Студія</a>
+          </li>
+          <li class="mobile-navigation__item">
+            <a class="mobile-navigation__link" href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li class="mobile-navigation__item">
+            <a class="mobile-navigation__link" href="">Контакти</a>
+          </li>
+        </ul>
+        <ul class="mobile-contacts">
+          <li class="mobile-contacts__item">
+            <a class="mobile-contacts__link" href="tel:+380961111111"> +38 096 111 11 11</a>
+          </li>
+          <li class="mobile-contacts__item">
+            <a class="mobile-contacts__link" href="mailto:info@devstudio.com">
+              info@devstudio.com</a
+            >
+          </li>
+          <ul class="mobile-social">
+            <li class="mobile-social__item">
+              <a href="" class="mobile-social__link">Instagram</a>
+            </li>
+            <li class="mobile-social__item"><a href="" class="mobile-social__link">Twitter</a></li>
+            <li class="mobile-social__item"><a href="" class="mobile-social__link">Facebook</a></li>
+            <li class="mobile-social__item"><a href="" class="mobile-social__link">Linkedin</a></li>
+          </ul>
+        </ul>
+      </div>
       <div class="page-header__container">
         <!-- navigation -->
         <nav class="navigation">
@@ -74,10 +105,6 @@
             ></use>
           </svg>
         </button>
-        <div class="menu-container" id="menu-container" data-menu>
-          <div class="navigation"></div>
-          <div class="contacts"></div>
-        </div>
       </div>
     </header>
     <main>
