completed adaptive graphic for time section

--- a/index.html
+++ b/index.html
@@ -207,10 +207,17 @@
           <ul class="team">
             <li class="team-member">
               <img
+                srcset="
+                  ./images/team/portret1/tel-450x460/img-min.jpg        450w,
+                  ./images/team/portret1/tel-450x460/img@2x-min.jpg     900w,
+                  ./images/team/portret1/tablet-354x374/img-min.jpg     354w,
+                  ./images/team/portret1/tablet-354x374/img@2x-min.jpg  708w,
+                  ./images/team/portret1/desktop-270x260/img-min.jpg    270w,
+                  ./images/team/portret1/desktop-270x260/img@2x-min.jpg 540w
+                "
+                sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 class="team-member__image"
-                src="./images/squoosh_portret1.jpg"
                 alt="Ігор Дем`яненко"
-                width="270"
               />
               <div class="team-member__wrap">
                 <h3 class="team-member__title">Ігор Дем`яненко</h3>
@@ -249,10 +256,18 @@
             </li>
             <li class="team-member">
               <img
+                srcset="
+                  ./images/team/portret2/tel-450x460/img-min.jpg        450w,
+                  ./images/team/portret2/tel-450x460/img@2x-min.jpg     900w,
+                  ./images/team/portret2/tablet-354x374/img-min.jpg     354w,
+                  ./images/team/portret2/tablet-354x374/img@2x-min.jpg  708w,
+                  ./images/team/portret2/desktop-270x260/img-min.jpg    270w,
+                  ./images/team/portret2/desktop-270x260/img@2x-min.jpg 540w
+                "
+                sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 class="team-member__image"
-                src="./images/squoosh_portret2.jpg"
+                src="./images/team/portret2/tel-450x460/img-min.jpg 450w"
                 alt="Ольга Рєпіна"
-                width="270"
               />
               <div class="team-member__wrap">
                 <h3 class="team-member__title">Ольга Рєпіна</h3>
@@ -291,10 +306,18 @@
             </li>
             <li class="team-member">
               <img
+                srcset="
+                  ./images/team/portret3/tel-450x460/img-min.jpg        450w,
+                  ./images/team/portret3/tel-450x460/img@2x-min.jpg     900w,
+                  ./images/team/portret3/tablet-354x374/img-min.jpg     354w,
+                  ./images/team/portret3/tablet-354x374/img@2x-min.jpg  708w,
+                  ./images/team/portret3/desktop-270x260/img-min.jpg    270w,
+                  ./images/team/portret3/desktop-270x260/img@2x-min.jpg 540w
+                "
+                sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 class="team-member__image"
-                src="./images/squoosh_portret3.jpg"
+                src="./images/team/portret3/tel-450x460/img-min.jpg 450w"
                 alt="Микола Тарасов"
-                width="270"
               />
               <div class="team-member__wrap">
                 <h3 class="team-member__title">Микола Тарасов</h3>
@@ -333,10 +356,18 @@
             </li>
             <li class="team-member">
               <img
+                srcset="
+                  ./images/team/portret4/tel-450x460/img-min.jpg        450w,
+                  ./images/team/portret4/tel-450x460/img@2x-min.jpg     900w,
+                  ./images/team/portret4/tablet-354x374/img-min.jpg     354w,
+                  ./images/team/portret4/tablet-354x374/img@2x-min.jpg  708w,
+                  ./images/team/portret4/desktop-270x260/img-min.jpg    270w,
+                  ./images/team/portret4/desktop-270x260/img@2x-min.jpg 540w
+                "
+                sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 class="team-member__image"
-                src="./images/squoosh_portret4.jpg"
+                src="./images/team/portret4/tel-450x460/img-min.jpg 450w"
                 alt="Михайло Єрмаков"
-                width="270"
               />
               <div class="team-member__wrap">
                 <h3 class="team-member__title">Михайло Єрмаков</h3>
