completed adaptive graphic for specialization section

--- a/index.html
+++ b/index.html
@@ -166,10 +166,13 @@
           <ul class="specialization">
             <li class="specialization__item">
               <img
+                srcset="
+                  ./images/specialization/spec1/img-min.jpg    1x,
+                  ./images/specialization/spec1/img@2x-min.jpg 2x
+                "
                 class="specialization__image"
-                src="./images/squoosh_img1.jpg"
+                src="./images/specialization/spec1/img-min.jpg"
                 alt="розробляємо веб додатки"
-                width="370"
               />
               <div class="specialization__text-wrap">
                 <h3>Десктопні застосунки</h3>
@@ -177,10 +180,13 @@
             </li>
             <li class="specialization__item">
               <img
+                srcset="
+                  ./images/specialization/spec2/img-min.jpg    1x,
+                  ./images/specialization/spec2/img@2x-min.jpg 2x
+                "
                 class="specialization__image"
-                src="./images/squoosh_img2.jpg"
+                src="./images/specialization/spec2/img-min.jpg"
                 alt="розробляємо мобільні додатки"
-                width="370"
               />
               <div class="specialization__text-wrap">
                 <h3>мобільні застосунки</h3>
@@ -188,10 +194,13 @@
             </li>
             <li class="specialization__item">
               <img
+                srcset="
+                  ./images/specialization/spec3/img-min.jpg    1x,
+                  ./images/specialization/spec3/img@2x-min.jpg 2x
+                "
                 class="specialization__image"
-                src="./images/squoosh_img3.jpg"
+                src="./images/specialization/spec3/img-min.jpg"
                 alt="стилізуємо наші розробки"
-                width="370"
               />
               <div class="specialization__text-wrap">
                 <h3>дизайнерські рішення</h3>
@@ -217,6 +226,7 @@
                 "
                 sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 class="team-member__image"
+                src="./images/team/portret1/tel-450x460/img-min.jpg 450w"
                 alt="Ігор Дем`яненко"
               />
               <div class="team-member__wrap">
