--- a/portfolio.html
+++ b/portfolio.html
@@ -133,12 +133,30 @@
             <li class="gallery-item">
               <a href="" class="gallery-item__link">
                 <div class="gallery-item__wrap">
-                  <img
-                    class="gallery-item__image"
-                    src="./images/squoosh_portfolio1.jpg"
-                    alt="Веб-сайт Технокряк"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/gallery/picture1/tel/img-min.jpg    1x,
+                        ./images/gallery/picture1/tel/img@2x-min.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture1/tablet/img-min.jpg    1x,
+                        ./images/gallery/picture1/tablet/img@2x-min.jpg 2x
+                      "
+                      media="(min-width:  768px) and (max-width: 1199px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture1/desktop/img-min.jpg    1x,
+                        ./images/gallery/picture1/desktop/img@2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./images/gallery/picture1/tel/img-min.jpg" alt="Веб-сайт Технокряк" />
+                  </picture>
                   <div class="gallery-item__overlay-bkg">
                     <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -156,12 +174,33 @@
             <li class="gallery-item">
               <a href="" class="gallery-item__link">
                 <div class="gallery-item__wrap">
-                  <img
-                    class="gallery-item__image"
-                    src="./images/squoosh_portfolio2.jpg"
-                    alt="Дизайн постер New Orlean vs Golden Star"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/gallery/picture2/tel/img-min.jpg    1x,
+                        ./images/gallery/picture2/tel/img@2x-min.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture2/tablet/img-min.jpg    1x,
+                        ./images/gallery/picture2/tablet/img@2x-min.jpg 2x
+                      "
+                      media="(min-width:  768px) and (max-width: 1199px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture2/desktop/img-min.jpg    1x,
+                        ./images/gallery/picture2/desktop/img@2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img
+                      src="./images/gallery/picture2/tel/img-min.jpg"
+                      alt="Дизайн постер New Orlean vs Golden Star"
+                    />
+                  </picture>
                   <div class="gallery-item__overlay-bkg">
                     <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -179,12 +218,33 @@
             <li class="gallery-item">
               <a href="" class="gallery-item__link">
                 <div class="gallery-item__wrap">
-                  <img
-                    class="gallery-item__image"
-                    src="./images/squoosh_portfolio3.jpg"
-                    alt="Додаток ресторан Seafood"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/gallery/picture3/tel/img-min.jpg    1x,
+                        ./images/gallery/picture3/tel/img@2x-min.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture3/tablet/img-min.jpg    1x,
+                        ./images/gallery/picture3/tablet/img@2x-min.jpg 2x
+                      "
+                      media="(min-width:  768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture3/desktop/img-min.jpg    1x,
+                        ./images/gallery/picture3/desktop/img@2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img
+                      src="./images/gallery/picture3/tel/img-min.jpg"
+                      alt="Додаток ресторан Seafood"
+                    />
+                  </picture>
                   <div class="gallery-item__overlay-bkg">
                     <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -202,12 +262,33 @@
             <li class="gallery-item">
               <a href="" class="gallery-item__link">
                 <div class="gallery-item__wrap">
-                  <img
-                    class="gallery-item__image"
-                    src="./images/squoosh_portfolio4.jpg"
-                    alt="Маркетинг проект Prime"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/gallery/picture4/tel/img-min.jpg    1x,
+                        ./images/gallery/picture4/tel/img@2x-min.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture4/tablet/img-min.jpg    1x,
+                        ./images/gallery/picture4/tablet/img@2x-min.jpg 2x
+                      "
+                      media="(min-width:  768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture4/desktop/img-min.jpg    1x,
+                        ./images/gallery/picture4/desktop/img@2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img
+                      src="./images/gallery/picture4/tel/img-min.jpg"
+                      alt="Маркетинг проект Prime"
+                    />
+                  </picture>
                   <div class="gallery-item__overlay-bkg">
                     <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -225,12 +306,33 @@
             <li class="gallery-item">
               <a href="" class="gallery-item__link">
                 <div class="gallery-item__wrap">
-                  <img
-                    class="gallery-item__image"
-                    src="./images/squoosh_portfolio5.jpg"
-                    alt="Додаток проект Boxes"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/gallery/picture5/tel/img-min.jpg    1x,
+                        ./images/gallery/picture5/tel/img@2x-min.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture5/tablet/img-min.jpg    1x,
+                        ./images/gallery/picture5/tablet/img@2x-min.jpg 2x
+                      "
+                      media="(min-width:  768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture5/desktop/img-min.jpg    1x,
+                        ./images/gallery/picture5/desktop/img@2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img
+                      src="./images/gallery/picture5/tel/img-min.jpg"
+                      alt="Додаток проект Boxes"
+                    />
+                  </picture>
                   <div class="gallery-item__overlay-bkg">
                     <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -248,12 +350,33 @@
             <li class="gallery-item">
               <a href="" class="gallery-item__link">
                 <div class="gallery-item__wrap">
-                  <img
-                    class="gallery-item__image"
-                    src="./images/squoosh_portfolio6.jpg"
-                    alt="Веб-сайт Inspiration has no Borders"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/gallery/picture6/tel/img-min.jpg    1x,
+                        ./images/gallery/picture6/tel/img@2x-min.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture6/tablet/img-min.jpg    1x,
+                        ./images/gallery/picture6/tablet/img@2x-min.jpg 2x
+                      "
+                      media="(min-width:  768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture6/desktop/img-min.jpg    1x,
+                        ./images/gallery/picture6/desktop/img@2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img
+                      src="./images/gallery/picture6/tel/img-min.jpg"
+                      alt="Веб-сайт Inspiration has no Borders"
+                    />
+                  </picture>
                   <div class="gallery-item__overlay-bkg">
                     <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -271,12 +394,33 @@
             <li class="gallery-item">
               <a href="" class="gallery-item__link">
                 <div class="gallery-item__wrap">
-                  <img
-                    class="gallery-item__image"
-                    src="./images/squoosh_portfolio7.jpg"
-                    alt="Дизайн видання Limited Edition"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/gallery/picture7/tel/img-min.jpg    1x,
+                        ./images/gallery/picture7/tel/img@2x-min.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture7/tablet/img-min.jpg    1x,
+                        ./images/gallery/picture7/tablet/img@2x-min.jpg 2x
+                      "
+                      media="(min-width:  768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture7/desktop/img-min.jpg    1x,
+                        ./images/gallery/picture7/desktop/img@2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img
+                      src="./images/gallery/picture7/tel/img-min.jpg"
+                      alt="Дизайн видання Limited Edition"
+                    />
+                  </picture>
                   <div class="gallery-item__overlay-bkg">
                     <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -294,12 +438,33 @@
             <li class="gallery-item">
               <a href="" class="gallery-item__link">
                 <div class="gallery-item__wrap">
-                  <img
-                    class="gallery-item__image"
-                    src="./images/squoosh_portfolio8.jpg"
-                    alt="Маркетинг проект LAB"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/gallery/picture8/tel/img-min.jpg    1x,
+                        ./images/gallery/picture8/tel/img@2x-min.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture8/tablet/img-min.jpg    1x,
+                        ./images/gallery/picture8/tablet/img@2x-min.jpg 2x
+                      "
+                      media="(min-width:  768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture8/desktop/img-min.jpg    1x,
+                        ./images/gallery/picture8/desktop/img@2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img
+                      src="./images/gallery/picture8/tel/img-min.jpg"
+                      alt="Маркетинг проект LAB"
+                    />
+                  </picture>
                   <div class="gallery-item__overlay-bkg">
                     <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -317,12 +482,33 @@
             <li class="gallery-item">
               <a href="" class="gallery-item__link">
                 <div class="gallery-item__wrap">
-                  <img
-                    class="gallery-item__image"
-                    src="./images/squoosh_portfolio9.jpg"
-                    alt="Додаток Growing Business"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/gallery/picture9/tel/img-min.jpg    1x,
+                        ./images/gallery/picture9/tel/img@2x-min.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture9/tablet/img-min.jpg    1x,
+                        ./images/gallery/picture9/tablet/img@2x-min.jpg 2x
+                      "
+                      media="(min-width:  768px) and (max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/gallery/picture9/desktop/img-min.jpg    1x,
+                        ./images/gallery/picture9/desktop/img@2x-min.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img
+                      src="./images/gallery/picture9/tel/img-min.jpg"
+                      alt="Додаток Growing Business"
+                    />
+                  </picture>
                   <div class="gallery-item__overlay-bkg">
                     <p class="gallery-item__overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
