validator bugs fixed

--- a/index.html
+++ b/index.html
@@ -33,24 +33,32 @@
             <a class="mobile-navigation__link" href="">Контакти</a>
           </li>
         </ul>
-        <ul class="mobile-contacts">
-          <li class="mobile-contacts__item">
-            <a class="mobile-contacts__link" href="tel:+380961111111"> +38 096 111 11 11</a>
-          </li>
-          <li class="mobile-contacts__item">
-            <a class="mobile-contacts__link" href="mailto:info@devstudio.com">
-              info@devstudio.com</a
-            >
-          </li>
+        <div>
+          <ul class="mobile-contacts">
+            <li class="mobile-contacts__item">
+              <a class="mobile-contacts__link" href="tel:+380961111111"> +38 096 111 11 11</a>
+            </li>
+            <li class="mobile-contacts__item">
+              <a class="mobile-contacts__link" href="mailto:info@devstudio.com">
+                info@devstudio.com</a
+              >
+            </li>
+          </ul>
           <ul class="mobile-social">
             <li class="mobile-social__item">
               <a href="" class="mobile-social__link">Instagram</a>
             </li>
-            <li class="mobile-social__item"><a href="" class="mobile-social__link">Twitter</a></li>
-            <li class="mobile-social__item"><a href="" class="mobile-social__link">Facebook</a></li>
-            <li class="mobile-social__item"><a href="" class="mobile-social__link">Linkedin</a></li>
+            <li class="mobile-social__item">
+              <a href="" class="mobile-social__link">Twitter</a>
+            </li>
+            <li class="mobile-social__item">
+              <a href="" class="mobile-social__link">Facebook</a>
+            </li>
+            <li class="mobile-social__item">
+              <a href="" class="mobile-social__link">Linkedin</a>
+            </li>
           </ul>
-        </ul>
+        </div>
       </div>
       <div class="page-header__container">
         <!-- navigation -->
@@ -226,7 +234,7 @@
                 "
                 sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 class="team-member__image"
-                src="./images/team/portret1/tel-450x460/img-min.jpg 450w"
+                src="./images/team/portret1/tel-450x460/img-min.jpg"
                 alt="Ігор Дем`яненко"
               />
               <div class="team-member__wrap">
@@ -276,7 +284,7 @@
                 "
                 sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 class="team-member__image"
-                src="./images/team/portret2/tel-450x460/img-min.jpg 450w"
+                src="./images/team/portret2/tel-450x460/img-min.jpg"
                 alt="Ольга Рєпіна"
               />
               <div class="team-member__wrap">
@@ -326,7 +334,7 @@
                 "
                 sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 class="team-member__image"
-                src="./images/team/portret3/tel-450x460/img-min.jpg 450w"
+                src="./images/team/portret3/tel-450x460/img-min.jpg"
                 alt="Микола Тарасов"
               />
               <div class="team-member__wrap">
@@ -376,7 +384,7 @@
                 "
                 sizes=" (min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 class="team-member__image"
-                src="./images/team/portret4/tel-450x460/img-min.jpg 450w"
+                src="./images/team/portret4/tel-450x460/img-min.jpg"
                 alt="Михайло Єрмаков"
               />
               <div class="team-member__wrap">
