--- a/portfolio.html
+++ b/portfolio.html
@@ -32,15 +32,17 @@
             <a class="mobile-navigation__link" href="">Контакти</a>
           </li>
         </ul>
-        <ul class="mobile-contacts">
-          <li class="mobile-contacts__item">
-            <a class="mobile-contacts__link" href="tel:+380961111111"> +38 096 111 11 11</a>
-          </li>
-          <li class="mobile-contacts__item">
-            <a class="mobile-contacts__link" href="mailto:info@devstudio.com">
-              info@devstudio.com</a
-            >
-          </li>
+        <div>
+          <ul class="mobile-contacts">
+            <li class="mobile-contacts__item">
+              <a class="mobile-contacts__link" href="tel:+380961111111"> +38 096 111 11 11</a>
+            </li>
+            <li class="mobile-contacts__item">
+              <a class="mobile-contacts__link" href="mailto:info@devstudio.com">
+                info@devstudio.com</a
+              >
+            </li>
+          </ul>
           <ul class="mobile-social">
             <li class="mobile-social__item">
               <a href="" class="mobile-social__link">Instagram</a>
@@ -49,7 +51,7 @@
             <li class="mobile-social__item"><a href="" class="mobile-social__link">Facebook</a></li>
             <li class="mobile-social__item"><a href="" class="mobile-social__link">Linkedin</a></li>
           </ul>
-        </ul>
+        </div>
       </div>
       <div class="page-header__container">
         <!-- navigation -->
@@ -86,7 +88,7 @@
             >
           </li>
         </ul>
-        <!--  -------------- hamburger --------------  -->
+        <!--   hamburger   -->
         <button
           class="hamburger"
           type="button"
