--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
                         ./images/gallery/picture1/tablet/img-min.jpg    1x,
                         ./images/gallery/picture1/tablet/img@2x-min.jpg 2x
                       "
-                      media="(min-width:  768px) and (max-width: 1199px) and (max-width: 1199px)"
+                      media="(min-width:  768px) and (max-width: 1199px)"
                     />
                     <source
                       srcset="
@@ -189,7 +189,7 @@
                         ./images/gallery/picture2/tablet/img-min.jpg    1x,
                         ./images/gallery/picture2/tablet/img@2x-min.jpg 2x
                       "
-                      media="(min-width:  768px) and (max-width: 1199px) and (max-width: 1199px)"
+                      media="(min-width:  768px) and (max-width: 1199px)"
                     />
                     <source
                       srcset="
